--- a/index.html
+++ b/index.html
@@ -1,1 +1,433 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Free Action Games for Android</title>
+  <meta name="description" content="Action Games - a very popular genre of games for Android devices. Download the latest games for free.">
+  <meta name="keywords" content="Action, MOD Action, Free Action Games">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      line-height: 1.5;
+      -webkit-text-size-adjust: 100%;
+    }
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background: #e2e5de;
+      background-image: linear-gradient(to bottom, #e2e5de, #d0d3cc);
+    }
+    .container {
+      max-width: 100%;
+      margin: 0 auto;
+      padding: 0.5rem;
+    }
+    header.site-header, footer.site-footer {
+      background: rgba(34, 34, 34, 0.9);
+      color: white;
+      padding: 1rem 0;
+      text-align: center;
+      position: relative;
+    }
+    header.site-header h1 {
+      font-size: 1.5rem;
+      margin: 0.5rem 1rem;
+    }
+    .search-container {
+      margin: 0.5rem auto;
+      max-width: 100%;
+      padding: 0 1rem;
+      text-align: center;
+      position: relative;
+    }
+    .search-box {
+      width: 100%;
+      padding: 0.8rem;
+      border: 1px solid #ddd;
+      border-radius: 25px;
+      font-size: 1rem;
+      background: rgba(255, 255, 255, 0.9);
+    }
+    .search-explanation {
+      color: #ddd;
+      font-size: 0.8rem;
+      margin-top: 0.5rem;
+      padding: 0 1rem;
+    }
+    .game-container {
+      padding: 1rem 0;
+      position: relative;
+    }
+    .game-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 0.75rem;
+      padding: 0 0.5rem;
+    }
+    .game-item {
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 8px;
+      padding: 0.75rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+    .game-item:hover {
+      transform: translateY(-3px);
+    }
+    .game-item img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 5px;
+      aspect-ratio: 1/1;
+      object-fit: cover;
+    }
+    .game-item h2 {
+      font-size: 0.9rem;
+      margin: 0.5rem 0 0.3rem;
+      line-height: 1.3;
+    }
+    .game-item a {
+      color: #333;
+      text-decoration: none;
+    }
+    .game-item a:hover {
+      color: #8400ff;
+    }
+    .game-item p {
+      font-size: 0.8rem;
+      color: #666;
+      margin: 0.2rem 0;
+    }
+    .rating {
+      color: #FFD700;
+      font-size: 0.9rem;
+      margin: 0.2rem 0;
+    }
+    footer.site-footer p {
+      font-size: 0.9rem;
+      margin: 0;
+      padding: 0 1rem;
+    }
+
+    /* Media Queries for larger screens */
+    @media (min-width: 600px) {
+      .game-list {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      }
+      .game-item h2 {
+        font-size: 1rem;
+      }
+    }
+
+    @media (min-width: 768px) {
+      .container {
+        max-width: 95%;
+      }
+      .game-list {
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 1rem;
+      }
+    }
+
+    @media (min-width: 1200px) {
+      .container {
+        max-width: 1200px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div id="particles-js"></div>
+
+  <header class="site-header">
+    <div class="container">
+      <h1>Top Rated Action Games for Android</h1>
+      <div class="search-container">
+        <input type="search" class="search-box" placeholder="Search for action games...">
+        <p class="search-explanation">Find your favorite action-packed games by title, developer, or features</p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container game-container">
+    <section class="game-list">
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-04/1745057554_stickman-legends.png" alt="Stickman Legends">
+        <h2><a href="https://an1.com/4754-stickman-legends-mod.html">Stickman Legends (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: ZITGA</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2024-07/1721208786_shadow-knight.png" alt="Shadow Knight">
+        <h2><a href="https://an1.com/6464-shadow-knight-deathly-adventure-mod.html">Shadow Knight (MOD, Immortality)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Fansipan Limited</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2024-10/1729607912_swamp-attack.png" alt="Swamp Attack">
+        <h2><a href="https://an1.com/1155-swamp-attack-mods.html">Swamp Attack (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Moving Eye</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-02/1739889524_world-robot-boxing.png" alt="Real Steel World Robot Boxing">
+        <h2><a href="https://an1.com/1347-real-steel-world-robot-boxing-mod-apk.html">Real Steel World Robot Boxing (MOD, Money/Coins)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Reliance Games</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-04/1682535536_real-gangster-crime.jpg" alt="Real Gangster Crime">
+        <h2><a href="https://an1.com/4915-real-gangster-crime-mod.html">Real Gangster Crime (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Naxeex Action & RPG Games</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-03/1742049022_fps-strike-ops.png" alt="FPS Strike Ops">
+        <h2><a href="https://an1.com/7441-fps-strike-ops-modern-arena-mod.html">FPS Strike Ops (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: FPS Shooter & Action Game</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-03/1742824760_standoff-2.png" alt="Standoff 2">
+        <h2><a href="https://an1.com/4710-standoff-2.html">Standoff 2</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: AXLEBOLT LTD</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-04/1682629437_sniper-3d.jpg" alt="Sniper 3D">
+        <h2><a href="https://an1.com/266-sniper-3d-gun-shooting-games-mod-apk.html">Sniper 3D: Fun Free Online FPS (MOD, Unlimited Coins)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Wildlife Studios Inc</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2024-03/1709730091_mob-control.png" alt="Mob Control">
+        <h2><a href="https://an1.com/7164-mob-control-mod.html">Mob Control (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: VOODOO</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/34/a6/7d/34a67ddf-64ad-0a80-2ef4-c21914292822/AppIcon-0-0-1x_U007emarketing-0-8-0-0-85-220.png/230x0w.webp" alt="Hungry Shark World">
+        <h2><a href="https://an1.com/2881-hungry-shark-world-mod.html">Hungry Shark World (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Ubisoft Entertainment</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2022-02/1644788600_blades-of-brim.jpg" alt="Blades of Brim">
+        <h2><a href="https://an1.com/4185-blades-of-brim-mod.html">Blades of Brim (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: SYBO Games</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-06/1686822863_bombsquad.jpg" alt="BombSquad">
+        <h2><a href="https://an1.com/405-bombsquad-mod.html">BombSquad (MOD, Unlocked)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Eric Froemling</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-03/1741543584_stickman-great-war.png" alt="Stickman Great War">
+        <h2><a href="https://an1.com/7438-stickman-great-war-mod.html">Stickman Great War (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Sky Center</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2022-04/1649772829_shadowfight2.png" alt="Shadow Fight 2">
+        <h2><a href="https://an1.com/4701-shadow-fight-2-mod-apk-free.html">Shadow Fight 2 (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: NEKKI</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-05/1683145894_last-day.png" alt="Last Day on Earth">
+        <h2><a href="https://an1.com/4684-last-day-on-earth-survival-mod.html">Last Day on Earth: Survival (MOD Menu)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Kefir!</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-06/1686328890_cover-fire.jpg" alt="Cover Fire">
+        <h2><a href="https://an1.com/4433-cover-fire-mod.html">Cover Fire (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Viva Games Studios</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-01/1736015889_zombie-apocalypse.png" alt="Zombie Apocalypse">
+        <h2><a href="https://an1.com/7419-zombie-apocalypse-doomsday-z-mod.html">Zombie Apocalypse (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Freeplay Inc</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-02/1677345667_worms-zone-io.png" alt="Worms Zone">
+        <h2><a href="https://an1.com/7174-worms-zone-io-mod.html">Worms Zone .io (MOD, Unlimited Coins)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: CASUAL AZUR GAMES</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-04/1745066133_denis-di-gebukin-warga.png" alt="Denis Di Gebukin Warga">
+        <h2><a href="https://an1.com/7456-denis-di-gebukin-warga-mod.html">Denis Di Gebukin Warga (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Sandi Afanan</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2024-04/1712343089_war-robots.jpg" alt="War Robots">
+        <h2><a href="https://an1.com/919-war-robots.html">War Robots</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: MY.GAMES B.V.</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2024-12/1735419830_kick-the-buddy.png" alt="Kick the Buddy">
+        <h2><a href="https://an1.com/4694-kick-the-buddy-mod.html">Kick the Buddy (MOD, Unlimited Money/Gold)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Playgendary Limited</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-09/1695804770_spider-fighter-3.png" alt="Spider Fighter 3">
+        <h2><a href="https://an1.com/7237-spider-fighter-3-mod.html">Spider Fighter 3 (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Starplay DMCC</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2022-03/1646843579_intothedead2.png" alt="Into the Dead 2">
+        <h2><a href="https://an1.com/5569-into-the-dead-2-mod.html">Into the Dead 2 (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: PIKPOK</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2022-09/1662993112_zombiecatchers.png" alt="Zombie Catchers">
+        <h2><a href="https://an1.com/3306-zombie-catchers-mod-apk-free.html">Zombie Catchers (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Deca Games</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2023-06/1687857174_ninja-warrior.png" alt="Ninja Warrior">
+        <h2><a href="https://an1.com/7259-ninja-warrior-legend-of-adventure-mod.html">Ninja Warrior (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: TOH Games</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2024-01/1704181963_ultimate-custom-night.png" alt="Ultimate Custom Night">
+        <h2><a href="https://an1.com/6835-ultimate-custom-night-mod.html">Ultimate Custom Night (MOD, Unlocked)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Clickteam USA LLC</p>
+      </article>
+
+      <article class="game-item">
+        <img src="https://an1.com/uploads/posts/2025-01/1738337027_snake-clash.png" alt="Snake Clash">
+        <h2><a href="https://an1.com/7424-snake-clash-mod.html">Snake Clash (MOD, Unlimited Money)</a></h2>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+        <p>Developer: Supercent, Inc.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>&copy; 2025 Prosnoz.com - All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script>
+    // Reduced particle count for mobile performance
+    particlesJS("particles-js", {
+      particles: {
+        number: { 
+          value: window.innerWidth < 768 ? 20 : 40,
+          density: { 
+            enable: true, 
+            value_area: window.innerWidth < 768 ? 600 : 800 
+          } 
+        },
+        color: { value: "#8400ff" },
+        shape: { type: "circle" },
+        opacity: { 
+          value: 0.5,
+          random: true 
+        },
+        size: { 
+          value: window.innerWidth < 768 ? 2 : 3, 
+          random: true 
+        },
+        line_linked: { 
+          enable: true, 
+          distance: window.innerWidth < 768 ? 100 : 120, 
+          color: "#8400ff", 
+          opacity: 0.3, 
+          width: 1 
+        },
+        move: { 
+          enable: true, 
+          speed: window.innerWidth < 768 ? 2 : 4, 
+          direction: "none", 
+          random: true, 
+          straight: false, 
+          out_mode: "out", 
+          bounce: false 
+        }
+      },
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: { enable: false },
+          onclick: { enable: false },
+          resize: true
+        }
+      },
+      retina_detect: true
+    });
+
+    // Adjust particles on resize
+    window.addEventListener('resize', function() {
+      if(typeof particlesJS !== 'undefined') {
+        particlesJS("particles-js", {
+          particles: {
+            number: { 
+              value: window.innerWidth < 768 ? 20 : 40,
+              density: { 
+                enable: true, 
+                value_area: window.innerWidth < 768 ? 600 : 800 
+              } 
+            },
+            move: { 
+              speed: window.innerWidth < 768 ? 2 : 4
+            }
+          }
+        });
+      }
+    });
+  </script>
+</body>
+</html>
